2003-05-15 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/plugin/testplugin.h: fixed bug #767358, wrong
    preprocessor symbol for SHL_LOADER.

2003-05-15 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/config/config-msvc6.h: changed the compiler outputter 
    default format (CPPUNIT_COMPILER_LOCATION_FORMAT) for Visual Studio 7.0.
    Assertion now appears in the task list.

2003-05-07 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/extensions/Makefile.am: removed TestSuiteBuilder.h

  * Makefile.am
  * configure.in
  * config/ac_dll.m4
  * examples/cppunittest/Makefile.am
  * examples/hierarchy/Makefile.am
  * examples/money/Makefile.am
  * examples/simple/Makefile.am
  * include/cppunit/config/SelectDllLoader.h
  * include/cppunit/plugin/TestPlugIn.h
  * include/cppunit/tools/Algorithm.h
  * src/DllPlugInTester/Makefile.am
  * src/cppunit/Makefile.am
  * src/cppunit/TestDecorator.cpp
  * src/cppunit/ShlDynamicLibraryManager.cpp
  * src/cppunit/UnixDynamicLibraryManager.cpp
  * src/cppunit/Win32DynamicLibraryManager.cpp: applied patch from 
    Abdessattar Sassi <abdesassi@users.sourceforge.net> to add support
    for plug-in to hp-ux (patch #721546).

  * INSTALL-unix: added build instruction for HP-UX.

2003-04-06 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/extensions/TestSuiteBuilder.h: removed (unused)

2003-03-31 Baptiste Lepilleur <gaiacrtn@free.fr>

  * src/cppunit/DynamicLibraryManager.cpp: fixed compilation issue on Mingw
    (bug #711583)

2003-03-20 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/extensions/TestNamer.h:
  * src/cppunit/TestNamer.cpp: Fixed bug #704684, TestNamer has non-virtual
    destructor.

2003-03-15 Baptiste Lepilleur <gaiacrtn@free.fr>

  * src/msvc6/testrunner/DynamicWindow/cdxCDynamicWndEx.cpp:
  * examples/msvc6/CppUnitTestApp/CppUnitTestApp.cpp:
  * examples/msvc6/HostApp/HostApp.cpp:
  * src/msvc6/testpluginrunner/TestPlugInRunnerApp.cpp: fixed compatibility